--- a/shop-app/package.json
+++ b/shop-app/package.json
@@ -1,21 +1,35 @@
 {
-  "name": "shop-app",
-  "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@tanstack/react-query": "^4.0.0",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "typescript": "^4.4.2"
+    "react-router-dom": "^6.8.2",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.8",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
