--- a/shop-app/package.json
+++ b/shop-app/package.json
@@ -9,6 +9,7 @@
     "web-vitals": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.13",
